# Rust-Engine

./: .gitignore  Cargo.toml  README.md  datagen_log.txt  fixed-net  main.rs  makefile  test_compact.pgn  train.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.jules/: architect.md  bench_report.md
benches/: bench_main.rs
scripts/: bench_baseline.py  profile.sh  stress_test.py
src/: bitboard.rs  book.rs  build.rs  bullet_helper.rs  chess960.rs  correction.rs  datagen.rs  debug.rs  dense_history.rs  endgame.rs  eval.rs  history.rs  lib.rs  logging.rs  main.rs  movegen.rs  nnue.rs  nnue_scratch.rs  parameters.rs  pawn.rs  perft.rs  search.rs  state.rs  syzygy.rs  tactical_test.rs  tests.rs  tests_chess960.rs  threat.rs  time.rs  tt.rs  tuning.rs  tuning_spsa.rs  uci.rs  uci_output.rs  zobrist.rs
tests/: pseudo_legal_test.rs  repro_capture_on_empty.rs  repro_crash.rs  repro_tt_crash.rs
trainer/: Cargo.toml  train.py
trainer/src/: main.rs
