[package]
name = "aether"
version = "1.0.0"
edition = "2021"

[dependencies]
smallvec = "1.15.1"
# No external dependencies found in the source code so far.
# rand is implemented via a local PRNG in zobrist.rs
# lazy_static or once_cell are replaced by std::sync::OnceLock (Rust 1.70+)

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
