[package]
name = "aether"
version = "1.0.0"
edition = "2021"

[dependencies]
smallvec = "1.15.1"
bulletformat = { git = "https://github.com/jw1912/bulletformat" }
log = "0.4.29"
simplelog = "0.12.2"
# using pyrrhic-rs for syzygy since fathom binding is tricky blindly
pyrrhic-rs = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
bitflags = "2.10.0"
env_logger = "0.11.8"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["bmi2"]
bmi2 = []
tuning = []
packed-tt = []

[[bench]]
name = "bench_main"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
